add R script to extract clim for Chave WD

--- a/ms/ideas.tex
+++ b/ms/ideas.tex
@@ -48,40 +48,42 @@
 
 Understanding changes in vegetation composition across large biogeographic gradients is fundamental because vegetation is key to control ecosystem functioning, such as net primary production, and carbon storage. These changes in composition are also fundamental to understand biodiversity, as turnover in species composition explain a large proportion of the global diversity ($\beta$ diversity). In addition, these patterns are also the outcomes of long-term evolutionary adaptation. Understanding the drivers of these patterns is important not only for its intrinsic interest, but also as a path towards understanding how vegetation may change as result of environmental change.
 
-Beyond species succession pattern along climatic gradients, several studies document gradient of key leaf and stem traits with precipitation (see literature.pdf for a in progress review of the literature), with consistent patterns of decreasing leaf mass per area \citep{Wright-2004,Onoda-2011,Moles-2014} and wood density \citep{Chave-2006} with increasing water availability.  One specificity of observed pattern of traits variation are generally weak with generally a higher variation within sites than along the climatic gradients \citep[see][]{Wright-2004}. 
+Beyond species succession pattern along climatic gradients, several studies document gradient of key leaf and stem traits with precipitation (see literature.pdf for a in progress review of the literature), with consistent patterns of decreasing leaf mass per area \citep{Wright-2004,Onoda-2011,Moles-2014} and wood density \citep{Chave-2006} with increasing water availability.  One specificity of observed pattern of traits variation are generally weak with generally a higher variation within sites than along the climatic gradients \citep[see][]{Wright-2004}.
 
-%% NEED TO ADD LINK TO OUR OWN FIGURES HERE!
+\clearpage
 
-%% \begin{figure}[ht]
-%% \centering
-%% \includegraphics{../figures/leaf_climate.pdf}
-%% \caption{\textbf{Pattern in leaf mass per area and leaf nitrogen per area along mean annual temperature (a and c) and sum of annual precipitation (b and c).} 
-%% Data are from glopnet \citep{Wright-2004}.
-%% \label{fig:leafpattern}}
-%% \end{figure}
+NEED TO ADD OUR OWN FIGURES HERE! Not sure this is really interesting
 
-%% \begin{figure}[ht]
-%% \centering
-%% \includegraphics{../figures/wood_density_climate.pdf}
-%% \caption{\textbf{Pattern in wood density along mean annual temperature (a) and sum of annual precipitation (b).} 
-%% Data are from \citep{CHave-2009} and species mean climate were extracted from worldclim based on species records from gbif.
-%% \label{fig:WDpattern}}
-%% \end{figure}
+\begin{figure}[ht]
+\centering
+\includegraphics{../figures/leaf_climate.pdf}
+\caption{\textbf{Pattern in leaf mass per area and leaf nitrogen per area along mean annual temperature (a and c) and sum of annual precipitation (b and c).}%% Data are from glopnet \citep{Wright-2004}.
+\label{fig:leafpattern}}
+\end{figure}
+
+\begin{figure}[ht]
+\centering
+\includegraphics{../figures/wood_density_climate.pdf}
+\caption{\textbf{Pattern in wood density along mean annual temperature (a) and sum of annual precipitation (b).}
+Data are from \citep{CHave-2009} and species mean climate were extracted from worldclim based on species records from gbif.
+\label{fig:WDpattern}}
+\end{figure}
 
 
-%% \begin{figure}[ht]
-%% \centering
-%% \includegraphics{../figures/vessel_climate.pdf}
-%% \caption{\textbf{Pattern in wood anatomy (vessel area a and b, lumen fraction c and d, vessel number per area e and f) along mean annual temperature (a, c, and e) and sum of annual precipitation (b, c, and f).} 
-%% Data are from \citep{Zanne-2010} and species mean climate were extracted from worldclim based on species records from gbif.
-%% \label{fig:vesselpattern}}
-%% \end{figure}
+\begin{figure}[ht]
+\centering
+\includegraphics{../figures/vessel_climate.pdf}
+\caption{\textbf{Pattern in wood anatomy (vessel area a and b, lumen fraction c and d, vessel number per area e and f) along mean annual temperature (a, c, and e) and sum of annual precipitation (b, c, and f).}
+Data are from \citep{Zanne-2010} and species mean climate were extracted from worldclim based on species records from gbif.
+\label{fig:vesselpattern}}
+\end{figure}
 
+\clearpage
 
 
 Documenting empirical patterns of variation of plant traits along climatic gradient represents a key first step to understand the mechanisms explaining changes in vegetation composition, but so far very few studies have proposed mechanisms. These mechanisms need to explain the variation among sites with different climate but also the large variation within site resulting from the coexistence of interacting species with a range of trait values. A key element is thus any mechanisms proposed need to account for the effect of the climate on the species traits but also on the effect of traits on species interaction and coexistence.
 
-A promising approach for investigating causes of trait adaptation is via models capturing process of adaptation -- allow you to encode various rules and see how virtual system responds. Many abstract theoretical models, explored how species local climate adaptation, competitive interactions, and limited gene flow can drive species evolution and changes in traits composition along theoretical gradients \citep{Case-2000,Doebeli-2003,Goldberg-2006,Leimar-2008}. These studies generally showed that competition can limit species range and results in non continuous variation of traits value along the gradient. Most of abstract theoretical models are based on strong assumption about how traits are link to the competition and the response to the environmental gradient. Generally, one single traits determines both the local adaption to the abiotic conditions -- through the distance to an optimal trait value varying along the gradients -- and the competitive interaction -- through a normal competition kernel based on trait value of the species and its competitors. 
+A promising approach for investigating causes of trait adaptation is via models capturing process of adaptation -- allow you to encode various rules and see how virtual system responds. Many abstract theoretical models, explored how species local climate adaptation, competitive interactions, and limited gene flow can drive species evolution and changes in traits composition along theoretical gradients \citep{Case-2000,Doebeli-2003,Goldberg-2006,Leimar-2008}. These studies generally showed that competition can limit species range and results in non continuous variation of traits value along the gradient. Most of abstract theoretical models are based on strong assumption about how traits are link to the competition and the response to the environmental gradient. Generally, one single traits determines both the local adaption to the abiotic conditions -- through the distance to an optimal trait value varying along the gradients -- and the competitive interaction -- through a normal competition kernel based on trait value of the species and its competitors.
 
 The overall dominance of this classical view is surprising because other views about the link between traits and response to climate constrains and competition has been proposed in the literature. A common alternative view -- which can be traced back to Keddy's shifting competitive hierarchy \citep{Keddy-1989}-- proposes that all plant species have their physiological optima at the high productivity end of the gradient (low frost and drought stresses) but they differs in their tolerance to climate stresses and in term of their competitive abilities\citep{Keddy-1989}. Central to this view are the traits that underpin a tradeoff between species tolerance to climate stress \textit{vs.} their competitive abilities which shape species distributions along the gradient. Surprisingly, the number of theoretical models developed based on this alternative view of the effect of traits is extremely limited in comparison with the classical view (NEED TO CITE THE STUDIES WHO DID THAT \citep{Smith-1989,Leinard-2016} WHAT ABOUT MORE THEORETICAL WORK around the CC trade off see Case).
 
@@ -99,7 +101,7 @@ real traits and the underlying physiological mechanisms. Several model
 analyze how traits influence the physiological performance of single
 plant in function of the local abiotic conditions \citep{Sterck-2011}
 (need to look also at optimisation cost-benefit models seek, ask Mark
-and see other Sterck publications READ GIVNISH PAPERS TODO) to explain how traits explain changes in individual performances along gradients. These \textit{physiological models} have been focused on effect of climate on growth, but much less is understood in term of effect on mortality or recruitment precluding our ability to translate these effects on population dynamics or community assembly. 
+and see other Sterck publications READ GIVNISH PAPERS TODO) to explain how traits explain changes in individual performances along gradients. These \textit{physiological models} have been focused on effect of climate on growth, but much less is understood in term of effect on mortality or recruitment precluding our ability to translate these effects on population dynamics or community assembly.
 WE NEED TO DISCUSS \citep{Sakschewski-2015,Scheiter-2013} WHAT IS THEIR MAIN RESULTS? WHAT IS MISSING?
 Have been largely unsuccessful at explaining large-scale gradients because fail to explain (which??) observed patterns (because wrong traits, wrong directions).
 % We need to organise more clearly this section as optimisation model
@@ -255,7 +257,7 @@ The current implementation of Leaf nitrogen per area in `plant already captures 
 \caption{\textbf{Predicted community assembly of leaf mass per area and leaf N per area along a productivity gradient by 'Plant'. The size of the point represent the variation of LMA.}
 \label{fig:lma_mat_o_map}}
 \end{figure}
- 
+
 \clearpage
 
 4. Frost gradients affect survival but
@@ -282,8 +284,8 @@ $A_{max}$ \citep{Poorter-2010}, we know that vessel diameter scale with scale wi
 
 \section{Theoretical Cellular Automaton of Competition vs. climate stress tolerance tradeoff}
 
-It is surprising that few theoretical models have been developed on alternative view on the link between traits and species response to the joint effect of climate gradient and competition. 
-Here we propose to explore the effect of alternative view arising from the 'shifting competitive hierarchy' based on a 
+It is surprising that few theoretical models have been developed on alternative view on the link between traits and species response to the joint effect of climate gradient and competition.
+Here we propose to explore the effect of alternative view arising from the 'shifting competitive hierarchy' based on a
 Based on the few field studies that have documented such tradeoff for tree, it seems that such tradeoff might occurs for two key dimension of tree competitive ability. Loehle (1998) proposed the existence of a tradeoff between tree maximum height growth – a key determinant of competitive ability in early successional stage – and frost tolerance, but this has been tested in only in two studies (Koehler et al. 2012; Savage \& Cavender- Bares 2013). A few studies also explored trade-off with tree’ shade-tolerance –a key component of competitive ability in late successional stage (Rees et al. 2001)– and frost tolerance (Lusk et al. 2013) or drought tolerance (see Smith \& Huston 1989, Niinemets \& Valladares 2006, but see Sack 2004; Markesteijn et al. 2011).
 
 
